clang/test/BSC/Negative/Trait/r3/define_trait_var1/define_trait_var1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {}G; // expected-error {{only _Trait pointer type is allowed to be declared}}